include_directories(${CMAKE_CURRENT_SOURCE_DIR}/0XXX___solution_template)

add_subdirectory(0XXX___solution_template)
add_subdirectory(S_N_374X___guess_num)
add_subdirectory(S_N_700X___binary_search_tree)
add_subdirectory(S_N_872X___trees_with_similar_leaves)
add_subdirectory(S_N_1137___tebonacci_sequence)



add_subdirectory(S_Y_104X___tree_maxdepth)
add_subdirectory(S_Y_206X___list_reverse)
add_subdirectory(S_Y_746X___climb_stairs)